--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Django==1.4
 MySQL-python==1.2.5
--e git+git@github.com:BGSU-RNA/RNA-Structure-utils.git@cb8973c056f0b177e52652ed79bbd07f5ec07983#egg=RNAStructure-master
+-e git+git@github.com:BGSU-RNA/RNA-Structure-utils.git@cb8973c056f0b177e52652ed79bbd07f5ec07983#egg=RNAStructure-dev
+argparse==1.4.0
+beanstalkc==0.4.0
 stevedore==0.15
+subprocess32==3.2.7
 virtualenv==1.11.6
 virtualenv-clone==0.2.5
 virtualenvwrapper==4.2
